# ccn-software-fens-2024

./: .gitignore  README.md  Untitled.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: site.yml
binder/: apt.txt  environment-cuda.yml  environment.yml  postBuild  start
data/: README.md
docs/: gallery_conf.py  index.md
docs/assets/: extra.css
docs/examples/: 01_current_injection.py  01_fundamentals_of_pynapple.py  01_pynapple_time_series.py  02_data_analysis_with_pynapple.py  02_head_direction.py  03_current_injection.py  03_fpl_intro.py  04_fpl_neuro.py  04_head_direction.py  05_current_injection.py  05_fpl_intro.py  06_fpl_neuro.py  06_head_direction.py  07_place_cells.py
docs/examples/utils/: store_model.py
docs/just_code/: README.md
docs/setup/: readme.md  test_fastplotlib_installation.py
notebooks/: README.md
scripts/: check_setup.py  setup.py  strip_text.py
src/workshop_utils/: __init__.py  fetch.py  plotting.py  store_model.py
utils/: __init__.py  store_model.py
